# py-dmmjp

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-project.ini  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  pre-commit.yml
.pre-commit-hooks/: check-secrets.py
docs/: actresses.md  author.md  development.md  floors.md  genres.md  makers.md  products.md  series.md
examples/: async_actress_usage.py  basic_actress_usage.py  basic_author_usage.py  basic_floor_usage.py  basic_genre_usage.py  basic_maker_usage.py  basic_product_usage.py  basic_series_usage.py  basic_usage.py  with_async_context_manager.py  with_context_manager.py
py_dmm/: __init__.py  client.py  exceptions.py  product.py  py.typed
py_dmmjp/: __init__.py  actress.py  async_client.py  author.py  client.py  commons.py  exceptions.py  floor.py  genre.py  maker.py  product.py  series.py
tests/: actress_test_base.py  author_test_base.py  conftest.py  floor_test_base.py  genre_test_base.py  maker_test_base.py  product_test_base.py  series_test_base.py  test_actress_with_detailed_fields.py  test_actress_with_empty_fields.py  test_actress_with_missing_fields.py  test_author_dvd.py  test_author_figure.py  test_dummy.py  test_error_connection.py  test_error_http.py  test_error_http_async.py  test_error_json.py  test_error_json_async.py  test_floor.py  test_genre_dvd.py  test_genre_search_response_dvd.py  test_genre_search_response_videoa.py  test_genre_search_result_dvd.py  test_genre_search_result_videoa.py  test_genre_videoa.py  test_integration.py  test_integration_actress.py  test_integration_actress_async.py  test_integration_author.py  test_integration_author_async.py  test_integration_floor.py  test_integration_floor_async.py  test_integration_genre.py  test_integration_genre_async.py  test_integration_maker.py  test_integration_maker_async.py  test_integration_product.py  test_integration_product_async.py  test_integration_series.py  (+35 more)
